--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "lodash3": "3.10.1",
     "postman-collection": "0.5.7",
     "tv4": "1.2.7",
-    "uniscope": "0.1.1-beta.1",
+    "uniscope": "0.1.1",
     "xml2js": "0.4.17"
   }
 }
