--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "browser": {
     "./lib/bundle/index.js": "./lib/bundle/index.browser.js",
-    "./lib/uvm/bridge.js": "./lib/uvm/bridge.browser.js",
     "./.cache/bootcode.js": "./.cache/bootcode.browser.js"
   },
   "scripts": {
@@ -32,7 +31,7 @@
     "inherits": "2.0.3",
     "lodash": "4.17.2",
     "uuid": "3.0.1",
-    "uvm": "1.2.0"
+    "uvm": "1.3.0-beta.1"
   },
   "devDependencies": {
     "async": "2.1.4",
