--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "atob": "2.0.3",
     "backbone": "1.3.3",
     "btoa": "1.1.2",
-    "buffer-browserify": "0.2.5",
+    "buffer": "5.0.2",
     "cheerio": "0.22.0",
     "crypto-js": "3.1.9-1",
     "jquery": "3.1.1",
