--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
     "recursive-readdir": "^2.1.0",
+    "semver": "5.3.0",
     "shelljs": "0.7.5",
     "uglifyify": "3.0.4"
   },
