--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "nsp": "2.6.3",
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
-    "postman-collection": "1.0.2",
+    "postman-collection": "1.1.0-beta.2",
     "recursive-readdir": "^2.1.0",
     "shelljs": "0.7.7",
     "tv4": "1.2.7",
