--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "backbone": "1.3.3",
     "btoa": "1.1.2",
     "buffer": "5.0.5",
+    "chai": "3.5.0",
     "cheerio": "0.22.0",
     "colors": "1.1.2",
     "crypto-js": "3.1.9-1",
