--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postman-sandbox",
-  "version": "2.1.0",
+  "version": "2.1.1-beta.1",
   "description": "Sandbox for Postman Scripts to run in NodeJS or Chrome",
   "main": "index.js",
   "directories": {
@@ -67,7 +67,7 @@
     "nsp": "2.6.3",
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
-    "postman-collection": "1.1.1-beta.2",
+    "postman-collection": "1.1.1-beta.3",
     "recursive-readdir": "^2.1.0",
     "shelljs": "0.7.7",
     "tv4": "1.2.7",
