--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "liquid-json": "0.3.1",
     "lodash3": "3.10.1",
     "mocha": "3.4.2",
+    "moment": "2.18.1",
     "nsp": "2.6.3",
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
