bug(scripts): Renamed prepublish script to prepublishOnly :bug:

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test-lint": "node npm/test-lint.js",
     "test-unit": "node npm/test-unit.js",
     "test": "node npm/test.js",
-    "prepublish": "node npm/prepublish.js"
+    "prepublishOnly": "node npm/prepublishOnly.js"
   },
   "keywords": [
     "eval",
