--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cheerio": "0.22.0",
     "colors": "1.1.2",
     "crypto-js": "3.1.9-1",
+    "csv-parse": "1.2.0",
     "editorconfig": "0.13.2",
     "eslint": "3.18.0",
     "eslint-plugin-jsdoc": "3.1.0",
