--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "nsp": "2.7.0",
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
-    "postman-collection": "2.1.3",
+    "postman-collection": "3.0.0-beta.1",
     "recursive-readdir": "^2.1.0",
     "shelljs": "0.7.8",
     "tv4": "1.2.7",
