--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postman-sandbox",
-  "version": "2.3.3",
+  "version": "2.3.4-beta.1",
   "description": "Sandbox for Postman Scripts to run in NodeJS or Chrome",
   "main": "index.js",
   "directories": {
@@ -71,7 +71,7 @@
     "nsp": "2.7.0",
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
-    "postman-collection": "3.0.0-beta.1",
+    "postman-collection": "3.0.0-beta.2",
     "recursive-readdir": "^2.1.0",
     "shelljs": "0.7.8",
     "tv4": "1.2.7",
