--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "btoa": "1.1.2",
     "buffer": "5.0.8",
     "chai": "4.1.2",
+    "chai-postman": "0.1.0",
     "cheerio": "0.22.0",
     "colors": "1.1.2",
     "crypto-js": "3.1.9-1",
