--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "buffer": "5.0.8",
     "chai": "4.1.2",
     "chai-postman": "0.1.0",
+    "chalk": "2.3.0",
     "cheerio": "0.22.0",
-    "colors": "1.1.2",
     "crypto-js": "3.1.9-1",
     "csv-parse": "1.2.4",
     "editorconfig": "0.15.0",
@@ -73,7 +73,7 @@
     "packity": "0.3.2",
     "parse-gitignore": "0.3.1",
     "postman-collection": "3.0.2-beta.2",
-    "recursive-readdir": "^2.1.0",
+    "recursive-readdir": "2.2.1",
     "shelljs": "0.7.8",
     "tv4": "1.2.7",
     "uglifyify": "4.0.4",
