--- a/package.json
+++ b/package.json
@@ -30,54 +30,54 @@
   "license": "Apache-2.0",
   "dependencies": {
     "inherits": "2.0.3",
-    "lodash": "4.17.4",
-    "uuid": "3.1.0",
+    "lodash": "4.17.5",
+    "uuid": "3.2.1",
     "uvm": "1.7.1"
   },
   "devDependencies": {
     "assert": "1.4.1",
     "async": "2.6.0",
-    "atob": "2.0.3",
+    "atob": "2.1.0",
     "backbone": "1.3.3",
-    "browserify": "14.5.0",
-    "btoa": "1.1.2",
-    "buffer": "5.0.8",
+    "browserify": "16.1.1",
+    "btoa": "1.2.1",
+    "buffer": "5.1.0",
     "chai": "4.1.2",
-    "chai-postman": "1.0.1",
-    "chalk": "2.3.0",
+    "chai-postman": "1.0.2",
+    "chalk": "2.3.2",
     "cheerio": "0.22.0",
     "crypto-js": "3.1.9-1",
     "csv-parse": "1.2.4",
     "editorconfig": "0.15.0",
-    "eslint": "4.12.0",
-    "eslint-plugin-jsdoc": "3.2.0",
-    "eslint-plugin-lodash": "2.5.0",
+    "eslint": "4.19.1",
+    "eslint-plugin-jsdoc": "3.6.0",
+    "eslint-plugin-lodash": "2.7.0",
     "eslint-plugin-mocha": "4.11.0",
     "eslint-plugin-security": "1.4.0",
     "expect.js": "0.3.1",
     "istanbul": "0.4.5",
-    "jquery": "3.1.1",
-    "js-yaml": "3.10.0",
+    "jquery": "3.3.1",
+    "js-yaml": "3.11.0",
     "jsdoc": "3.5.5",
-    "jsdoc-to-markdown": "3.0.2",
-    "karma": "1.7.1",
-    "karma-browserify": "5.1.2",
+    "jsdoc-to-markdown": "4.0.1",
+    "karma": "2.0.0",
+    "karma-browserify": "5.2.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
     "liquid-json": "0.3.1",
     "lodash3": "3.10.1",
-    "mocha": "4.0.1",
-    "moment": "2.19.3",
+    "mocha": "5.0.1",
+    "moment": "2.22.0",
     "nsp": "2.8.1",
     "packity": "0.3.2",
-    "parse-gitignore": "0.3.1",
-    "postman-collection": "3.0.6",
-    "recursive-readdir": "2.2.1",
-    "shelljs": "0.7.8",
-    "tv4": "1.2.7",
+    "parse-gitignore": "0.4.0",
+    "postman-collection": "3.0.8",
+    "recursive-readdir": "2.2.2",
+    "shelljs": "0.8.1",
+    "tv4": "1.3.0",
     "uglifyify": "4.0.5",
-    "uniscope": "1.1.1",
+    "uniscope": "1.1.2",
     "xml2js": "0.4.19"
   },
   "repository": {
@@ -87,5 +87,10 @@
   "bugs": {
     "url": "https://github.com/postmanlabs/postman-sandbox/issues"
   },
-  "homepage": "https://github.com/postmanlabs/postman-sandbox#readme"
+  "homepage": "https://github.com/postmanlabs/postman-sandbox#readme",
+  "greenkeeper": {
+    "ignore": [
+      "mocha"
+    ]
+  }
 }
