--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "nsp": "2.8.1",
     "packity": "0.3.2",
     "parse-gitignore": "0.4.0",
-    "postman-collection": "3.0.10",
+    "postman-collection": "postmanlabs/postman-collection#feature/wip-change-tracking",
     "recursive-readdir": "2.2.2",
     "shelljs": "0.8.2",
     "tv4": "1.3.0",
