use puppeteer for browser tests. remove node v4 and add node v10 in .travis.yaml.

--- a/.eslintrc
+++ b/.eslintrc
@@ -143,7 +143,7 @@
     "no-mixed-requires": "off",
     "no-new-require": "off",
     "no-path-concat": "error",
-    "no-process-env": "error",
+    "no-process-env": "off",
     "no-process-exit": "off",
     "no-restricted-modules": "error",
     "no-sync": "off",
