--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "packity": "0.3.2",
     "parse-gitignore": "0.5.1",
     "postman-collection": "3.3.0",
+    "puppeteer": "1.10.0",
     "recursive-readdir": "2.2.2",
     "shelljs": "0.8.2",
     "tv4": "1.3.0",
