--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "btoa": "1.2.1",
     "buffer": "5.2.1",
     "chai": "4.2.0",
-    "chai-postman": "1.1.0",
+    "chai-postman": "1.1.1-beta.1",
     "chalk": "2.4.1",
     "cheerio": "0.22.0",
     "crypto-js": "3.1.9-1",
