--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "tv4": "1.3.0",
     "uglifyify": "5.0.1",
     "uniscope": "1.1.2",
-    "xml2js": "0.4.19"
+    "xml2js": "0.4.19",
+    "yankee": "^1.0.8"
   },
   "repository": {
     "type": "git",
