--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "puppeteer": "1.14.0",
     "recursive-readdir": "2.2.2",
     "shelljs": "0.8.3",
+    "sinon": "7.3.2",
+    "sinon-chai": "3.3.0",
     "tv4": "1.3.0",
     "uglifyify": "5.0.1",
     "uniscope": "1.1.2",
