--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "inherits": "2.0.3",
     "lodash": "4.17.11",
+    "tough-cookie": "3.0.1",
     "uuid": "3.3.2",
     "uvm": "1.7.5"
   },
