--- a/package.json
+++ b/package.json
@@ -52,15 +52,15 @@
     "csv-parse": "1.2.4",
     "editorconfig": "0.15.3",
     "eslint": "5.16.0",
-    "eslint-plugin-jsdoc": "4.8.3",
+    "eslint-plugin-jsdoc": "7.2.3",
     "eslint-plugin-lodash": "5.1.0",
     "eslint-plugin-mocha": "5.3.0",
     "eslint-plugin-security": "1.4.0",
     "istanbul": "0.4.5",
-    "jquery": "3.4.0",
+    "jquery": "3.4.1",
     "js-yaml": "3.13.1",
-    "jsdoc": "3.5.5",
-    "jsdoc-to-markdown": "4.0.1",
+    "jsdoc": "3.6.2",
+    "jsdoc-to-markdown": "5.0.0",
     "karma": "3.1.4",
     "karma-browserify": "6.0.0",
     "karma-chrome-launcher": "2.2.0",
@@ -72,8 +72,8 @@
     "moment": "2.24.0",
     "packity": "0.3.2",
     "parse-gitignore": "1.0.1",
-    "postman-collection": "3.4.8",
-    "puppeteer": "1.14.0",
+    "postman-collection": "3.4.9",
+    "puppeteer": "1.17.0",
     "recursive-readdir": "2.2.2",
     "shelljs": "0.8.3",
     "sinon": "7.3.2",
@@ -82,7 +82,7 @@
     "uglifyify": "5.0.1",
     "uniscope": "1.1.2",
     "xml2js": "0.4.19",
-    "yankee": "^1.0.8"
+    "yankee": "1.0.8"
   },
   "repository": {
     "type": "git",
