--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,8 @@
+master:
+  chores:
+    - Bumped `postman-collection` to `v3.4.9`
+    - Updated dependencies
+
 3.2.7:
   date: 2019-04-26
   new features:
