Add eslint-plugin-jsdoc to greenkeeper.ignore

--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
   "greenkeeper": {
     "ignore": [
       "mocha",
-      "csv-parse"
+      "csv-parse",
+      "eslint-plugin-jsdoc"
     ]
   }
 }
