--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,30 @@
+master:
+  new features:
+    - |
+      Aadded APIs for visualiser operations with following methods.
+
+        -> `pm.visualiser.set` - Allow setting visualiser template and its options
+
+          ```
+          var template = '<h1>Hello, {{name}}<h1>',
+              options = {
+                data: {
+                  name: 'Postman'
+                },
+                hanadlebarsOptions: {
+                  // options to use while compiling handlebars template
+                }
+              };
+          pm.visualiser.set(template, options);
+          ```
+
+        -> `pm.visualiser.clear` - Removes previously set visualiser template and its options
+
+          ```
+          pm.visualiser.set(template, options);
+          pm.visualiser.clear(); // will remove set template in above line
+          ```
+
 3.2.9:
   date: 2019-06-17
   chores:
