--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "tv4": "1.3.0",
     "uglifyify": "5.0.2",
     "uniscope": "1.1.3",
-    "xml2js": "0.4.22",
+    "xml2js": "0.4.19",
     "yankee": "1.0.8"
   },
   "repository": {
@@ -94,6 +94,7 @@
   "homepage": "https://github.com/postmanlabs/postman-sandbox#readme",
   "greenkeeper": {
     "ignore": [
+      "xml2js",
       "mocha",
       "csv-parse",
       "eslint-plugin-jsdoc"
