--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,6 @@
 master:
+  new features:
+    - GH-496 Added support for `pm.collectionVariables` VariableScope
   chores:
     - Updated dependencies
 
