--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-master:
+3.4.0:
+  date: 2019-10-01
   new features:
     - GH-496 Added support for `pm.collectionVariables` VariableScope
   chores:
