--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,9 @@
 master:
   new features:
     - GH-502 Added support for non-JSON compatible data types in console logs
+    - |
+      GH-502 Added option `serializeLogs` to allow sending `teleport-javascript`
+      serialized logs
 
 3.4.0:
   date: 2019-10-01
