--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,10 +1,11 @@
-master:
+3.5.0:
+  date: 2019-11-12
   new features:
     - GH-502 Added support for non-JSON compatible data types in console logs
     - |
       GH-502 Added option `serializeLogs` to allow sending `teleport-javascript`
       serialized logs
-    - GH-504 Added support for functions, weakMaps, etc. in console logs
+    - 'GH-504 Added support for functions, weakMaps, etc. in console logs'
   chores:
     - Updated dependencies
 
