--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-master:
+3.5.1:
+  date: 2019-11-13
   chores:
     - |
       GH-507 Updated console serialize replacer to generate verbose placeholders
