Add codecov as coverage tool in TravisCI

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test-lint": "node npm/test-lint.js",
     "test-unit": "node npm/test-unit.js",
     "test-vm": "node npm/test-vm.js",
-    "test": "node npm/test.js",
+    "test": "npm run test-lint && npm run cache && npm run test-system && npm run test-unit && npm run test-vm && npm run test-integration && npm run test-browser",
     "prepublish": "node npm/prepublish.js"
   },
   "keywords": [
