--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,9 @@
+master:
+  chores:
+    - GH-511 Store boot code as base64 string
+    - GH-512 Exclude response object from execution before dispatch
+    - Updated dependencies
+
 3.5.1:
   date: 2019-11-13
   chores:
