--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "lodash": "4.17.15",
     "teleport-javascript": "1.0.0",
     "tough-cookie": "3.0.1",
-    "uuid": "3.3.3",
+    "uuid": "3.4.0",
     "uvm": "1.7.8"
   },
   "devDependencies": {
-    "ajv": "6.10.2",
-    "assert": "1.4.1",
+    "ajv": "6.11.0",
+    "assert": "2.0.0",
     "async": "2.6.2",
     "atob": "2.1.2",
     "backbone": "1.4.0",
@@ -49,12 +49,12 @@
     "chai-postman": "1.1.3",
     "chalk": "2.4.2",
     "cheerio": "0.22.0",
-    "crypto-js": "3.1.9-1",
+    "crypto-js": "3.3.0",
     "csv-parse": "1.2.4",
     "editorconfig": "0.15.3",
     "eslint": "5.16.0",
     "eslint-plugin-jsdoc": "7.2.3",
-    "eslint-plugin-lodash": "5.1.0",
+    "eslint-plugin-lodash": "6.0.0",
     "eslint-plugin-mocha": "6.2.2",
     "eslint-plugin-security": "1.4.0",
     "istanbul": "0.4.5",
@@ -74,11 +74,11 @@
     "packity": "0.3.2",
     "parse-gitignore": "1.0.1",
     "postman-collection": "3.5.5",
-    "puppeteer": "2.0.0",
+    "puppeteer": "2.1.1",
     "recursive-readdir": "2.2.2",
     "shelljs": "0.8.3",
-    "sinon": "7.5.0",
-    "sinon-chai": "3.3.0",
+    "sinon": "8.1.1",
+    "sinon-chai": "3.4.0",
     "tv4": "1.3.0",
     "uglifyify": "5.0.2",
     "uniscope": "1.1.3",
