--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+master:
+  fixed bugs:
+    - GH-589 Fixed a bug where asynchronous scripts are not executed in the browser
+
 3.5.5:
   date: 2020-06-14
   chores:
