--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,7 @@
 master:
   fixed bugs:
     - GH-603 Removed access from the UVM bridge once it's in execution closure
+    - GH-605 Sanitized the global scope by deleting the forbidden properties
 
 3.5.9:
   date: 2020-08-31
