--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,8 @@
 master:
   fixed bugs:
     - GH-603 Removed access from the UVM bridge once it's in execution closure
+  chores:
+    - GH-609 Bumped uvm (Web Worker bridge) and uniscope dependency
 
 3.5.9:
   date: 2020-08-31
