ESLint: use ignorePatterns instead of .eslintignore

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "parserOptions": {
         "ecmaVersion": 2018
     },
+    "ignorePatterns": ["lib/vendor/*"],
     "rules": {
         // Possible Errors
         "for-direction": "error",
