--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "test-lint": "node npm/test-lint.js",
     "test-unit": "node npm/test-unit.js",
     "test-vm": "node npm/test-vm.js",
-    "test": "npm run test-lint && npm run cache && npm run test-system && npm run test-unit && npm run test-vm && npm run test-integration && npm run test-browser",
-    "prepublish": "node npm/prepublish.js"
+    "pretest": "npm run cache",
+    "test": "npm run test-lint && npm run test-system && npm run test-unit && npm run test-vm && npm run test-integration && npm run test-browser",
+    "prepublishOnly": "node npm/prepublish.js"
   },
   "dependencies": {
     "inherits": "2.0.4",
