--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test-integration": "node npm/test-integration.js",
     "test-system": "node npm/test-system.js",
     "test-lint": "node npm/test-lint.js",
-    "test-unit": "node npm/test-unit.js",
+    "test-unit": "nyc --nycrc-path=.nycrc.js node npm/test-unit.js",
     "test-vm": "node npm/test-vm.js",
     "pretest": "npm run cache",
     "test": "npm run test-lint && npm run test-system && npm run test-unit && npm run test-vm && npm run test-integration && npm run test-browser",
@@ -67,7 +67,6 @@
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "istanbul": "^0.4.5",
     "jquery": "3.5.1",
     "js-yaml": "3.14.0",
     "jsdoc": "^3.6.6",
@@ -81,6 +80,7 @@
     "lodash3": "3.10.2",
     "mocha": "^8.1.3",
     "moment": "2.29.0",
+    "nyc": "^15.1.0",
     "packity": "^0.3.2",
     "parse-gitignore": "^1.0.1",
     "postman-collection": "3.6.7",
