--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -6,7 +6,8 @@ master:
     - GH-605 Sanitized the global scope by deleting the forbidden properties
   chores:
     - GH-609 Bumped uvm (Web Worker bridge) and uniscope dependency
-    - GH-615 Used terser for bootcode compression and store as utf8 code string
+    - GH-615 Used terser for bootcode compression and store as UTF-8 code string
+    - GH-616 Added postinstall script to override locales exported by faker
     - GH-613 Converted internal function implementations to ES6 class
     - GH-613 Removed uuid and inherits dependencies
     - >-
