--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "build-common-types": "node npm/build-types.js",
     "build-sandbox-types": "node npm/build-sandbox-types.js",
     "build-types": "npm run build-common-types && npm run build-sandbox-types",
+    "prepublishOnly": "node npm/prepublish.js",
+    "pretest": "npm run cache",
+    "postinstall": "node npm/postinstall.js",
+    "test": "npm run test-lint && npm run test-system && npm run test-unit && npm run test-vm && npm run test-integration && npm run test-browser",
     "test-browser": "node npm/test-browser.js",
     "test-integration": "node npm/test-integration.js",
-    "test-system": "node npm/test-system.js",
     "test-lint": "node npm/test-lint.js",
+    "test-system": "node npm/test-system.js",
     "test-unit": "nyc --nycrc-path=.nycrc.js node npm/test-unit.js",
-    "test-vm": "node npm/test-vm.js",
-    "pretest": "npm run cache",
-    "test": "npm run test-lint && npm run test-system && npm run test-unit && npm run test-vm && npm run test-integration && npm run test-browser",
-    "prepublishOnly": "node npm/prepublish.js",
-    "postinstall": "node npm/postinstall.js"
+    "test-vm": "node npm/test-vm.js"
   },
   "dependencies": {
     "lodash": "4.17.20",
