--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postman-sandbox",
   "version": "4.0.0-beta.1",
-  "description": "Sandbox for Postman Scripts to run in NodeJS or Chrome",
+  "description": "Sandbox for Postman Scripts to run in Node.js or browser",
   "author": "Postman Inc.",
   "license": "Apache-2.0",
   "main": "index.js",
