--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "uvm": "2.0.1"
   },
   "devDependencies": {
-    "@postman/shipit": "0.2.0",
+    "@postman/shipit": "^0.2.0",
     "ajv": "6.12.5",
     "assert": "2.0.0",
     "async": "^3.2.0",
@@ -54,7 +54,7 @@
     "backbone": "1.4.0",
     "browserify": "^16.5.2",
     "btoa": "1.2.1",
-    "buffer": "5.6.0",
+    "buffer": "6.0.3",
     "chai": "4.2.0",
     "chai-postman": "2.0.0",
     "chalk": "^4.1.0",
@@ -62,32 +62,32 @@
     "crypto-js": "3.3.0",
     "csv-parse": "1.2.4",
     "editorconfig": "^0.15.3",
-    "eslint": "^7.10.0",
+    "eslint": "^7.16.0",
     "eslint-plugin-jsdoc": "^30.6.3",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-security": "^1.4.0",
     "jquery": "3.5.1",
-    "js-yaml": "3.14.0",
+    "js-yaml": "^3.14.1",
     "jsdoc": "^3.6.6",
     "karma": "^5.2.3",
-    "karma-browserify": "^7.0.0",
+    "karma-browserify": "^8.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "liquid-json": "0.3.1",
     "lodash3": "3.10.2",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.1",
     "moment": "2.29.1",
     "nyc": "^15.1.0",
     "packity": "^0.3.2",
     "parse-gitignore": "^1.0.1",
-    "postman-collection": "3.6.8",
+    "postman-collection": "3.6.9",
     "recursive-readdir": "^2.2.2",
     "shelljs": "^0.8.4",
-    "sinon": "^9.2.0",
+    "sinon": "^9.2.2",
     "sinon-chai": "^3.5.0",
-    "terser": "^5.3.4",
+    "terser": "^5.5.1",
     "tough-cookie": "3.0.1",
     "tsd-jsdoc": "^2.5.0",
     "tv4": "1.3.0",
