--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test-vm": "node npm/test-vm.js"
   },
   "dependencies": {
-    "lodash": "4.17.20",
+    "lodash": "4.17.21",
     "teleport-javascript": "1.0.0",
     "uvm": "2.0.1"
   },
@@ -55,44 +55,44 @@
     "browserify": "^16.5.2",
     "btoa": "1.2.1",
     "buffer": "6.0.3",
-    "chai": "4.2.0",
+    "chai": "4.3.4",
     "chai-postman": "2.0.0",
     "chalk": "^4.1.0",
     "cheerio": "0.22.0",
     "crypto-js": "3.3.0",
     "csv-parse": "1.2.4",
     "editorconfig": "^0.15.3",
-    "eslint": "^7.16.0",
-    "eslint-plugin-jsdoc": "^30.6.3",
-    "eslint-plugin-lodash": "^7.1.0",
-    "eslint-plugin-mocha": "^8.0.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-lodash": "^7.2.0",
+    "eslint-plugin-mocha": "^8.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "jquery": "3.5.1",
-    "js-yaml": "^3.14.1",
+    "jquery": "^3.6.0",
+    "js-yaml": "^4.0.0",
     "jsdoc": "^3.6.6",
-    "karma": "^5.2.3",
+    "karma": "^6.3.0",
     "karma-browserify": "^8.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "liquid-json": "0.3.1",
     "lodash3": "3.10.2",
-    "mocha": "^8.2.1",
+    "mocha": "^8.3.2",
     "moment": "2.29.1",
     "nyc": "^15.1.0",
     "packity": "^0.3.2",
     "parse-gitignore": "^1.0.1",
-    "postman-collection": "3.6.9",
+    "postman-collection": "3.6.10",
     "recursive-readdir": "^2.2.2",
     "shelljs": "^0.8.4",
-    "sinon": "^9.2.2",
-    "sinon-chai": "^3.5.0",
-    "terser": "^5.5.1",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0",
+    "terser": "^5.6.1",
     "tough-cookie": "3.0.1",
     "tsd-jsdoc": "^2.5.0",
     "tv4": "1.3.0",
     "uniscope": "2.0.0",
-    "watchify": "^3.11.1",
+    "watchify": "^4.0.0",
     "xml2js": "0.4.23"
   },
   "engines": {
