--- a/package.json
+++ b/package.json
@@ -63,27 +63,27 @@
     "crypto-js": "3.3.0",
     "csv-parse": "1.2.4",
     "editorconfig": "^0.15.3",
-    "eslint": "^7.28.0",
-    "eslint-plugin-jsdoc": "^35.2.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-jsdoc": "^35.4.0",
     "eslint-plugin-lodash": "^7.2.0",
     "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-security": "^1.4.0",
     "jquery": "^3.6.0",
     "js-yaml": "^4.1.0",
     "jsdoc": "^3.6.7",
-    "karma": "^6.3.3",
+    "karma": "^6.3.4",
     "karma-browserify": "^8.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "liquid-json": "0.3.1",
     "lodash3": "3.10.2",
-    "mocha": "^9.0.0",
+    "mocha": "^9.0.1",
     "moment": "2.29.1",
     "nyc": "^15.1.0",
     "packity": "^0.3.2",
     "parse-gitignore": "^1.0.1",
-    "postman-collection": "3.6.11",
+    "postman-collection": "^4.0.0",
     "recursive-readdir": "^2.2.2",
     "shelljs": "^0.8.4",
     "sinon": "^11.1.1",
