--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "nyc": "^15.1.0",
     "packity": "^0.3.2",
     "parse-gitignore": "^1.0.1",
-    "postman-collection": "^4.0.0",
+    "postman-collection": "4.0.0",
     "recursive-readdir": "^2.2.2",
     "shelljs": "^0.8.4",
     "sinon": "^11.1.1",
