--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "test-vm": "node npm/test-vm.js"
   },
   "dependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/postman-collection": "^3.5.7",
     "lodash": "4.17.21",
     "postman-collection": "4.1.6",
     "teleport-javascript": "1.0.0",
@@ -93,6 +95,7 @@
     "tough-cookie": "3.0.1",
     "tsd-jsdoc": "^2.5.0",
     "tv4": "1.3.0",
+    "typescript": "^4.6.4",
     "uniscope": "2.0.1",
     "watchify": "^4.0.0",
     "xml2js": "0.4.23"
