--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.0.7:
+  date: 2022-05-24
   chores:
     - Run Travis coverage step in latest LTS Node.js release
     - Updated dependencies
