--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   },
   "dependencies": {
     "lodash": "4.17.21",
+    "postman-collection": "4.1.5",
     "teleport-javascript": "1.0.0",
-    "uvm": "2.1.1",
-    "postman-collection": "4.1.5"
+    "uvm": "2.1.1"
   },
   "devDependencies": {
     "@postman/shipit": "^0.4.0",
