--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,11 @@
+unreleased:
+  new features:
+    - GH-872 Added support for Promise execution
+    - GH-874 Added support for console.clear()
+  chores:
+    - GH-875 Updated Travis configuration to use an updated Ubuntu distribution
+    - Updated dependencies
+
 4.1.2:
   date: 2022-08-04
   fixed bugs:
