--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+unreleased:
+  fixed bugs:
+    - GH-884 Fixed memory leak due to console and cookie listeners
+
 4.2.0:
   date: 2022-11-28
   new features:
