--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@postman/shipit": "^0.4.0",
+    "@postman/tough-cookie": "4.1.2-postman.1",
     "ajv": "6.12.5",
     "assert": "2.0.0",
     "async": "^3.2.4",
@@ -89,7 +90,6 @@
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0",
     "terser": "^5.16.1",
-    "tough-cookie": "3.0.1",
     "tsd-jsdoc": "^2.5.0",
     "tv4": "1.3.0",
     "uniscope": "2.0.1",
