--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.2.1:
+  date: 2023-01-20
   fixed bugs:
     - GH-884 Fixed memory leak due to console and cookie listeners
   chores:
