--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.2.3:
+  date: 2023-02-22
   fixed bugs:
     - |
       GH-896 Fixed a bug where console events from previously executed scripts
