--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,8 @@
 unreleased:
   fixed bugs:
     - Fixed memory leak due to console listeners
+  chores:
+    - Moved `serializeLogs` option to context-level instead of per-execute
 
 4.2.3:
   date: 2023-02-22
