--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,8 @@
 unreleased:
   fixed bugs:
     - GH-907 Defined `Error.prepareStackTrace` to prevent stack trace pollution
+  chores:
+    - Updated dependencies
 
 4.2.4:
   date: 2023-03-10
