--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "postman-sandbox",
-  "version": "4.2.7",
+  "name": "postman-sandbox-secret-variable-type",
+  "version": "1.0.3",
   "description": "Sandbox for Postman Scripts to run in Node.js or browser",
   "author": "Postman Inc.",
   "license": "Apache-2.0",
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "lodash": "4.17.21",
-    "postman-collection": "4.2.0",
+    "postman-collection": "npm:postman-collection-secret-variable-type@1.0.3",
     "teleport-javascript": "1.0.0",
     "uvm": "2.1.1"
   },
