--- a/.jsdoc-config-type-def-sandbox.json
+++ b/.jsdoc-config-type-def-sandbox.json
@@ -16,7 +16,8 @@
     "excludePattern": "(^|\\/|\\\\)_"
   },
   "plugins": [
-    "tsd-jsdoc/dist/plugin"
+    "tsd-jsdoc/dist/plugin",
+    "./custom-plugin.js"
   ],
   "templates": {
     "cleverLinks": true,
