test: add some more tests for skip request tweak jsdoc type and description for skipRequest change error message in tests script

--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,6 @@
-master:
+unreleased:
   new features:
-    - GH-964 Add pm.execution.skipRequest support
+    - GH-964 Added support for `pm.execution.skipRequest()`
 
 4.2.8:
   date: 2023-10-19
