chore: add new custom jsdoc tags to exclude some functions from prerequest script or test script

--- a/.jsdoc-config-type-def-sandbox.json
+++ b/.jsdoc-config-type-def-sandbox.json
@@ -16,7 +16,8 @@
     "excludePattern": "(^|\\/|\\\\)_"
   },
   "plugins": [
-    "tsd-jsdoc/dist/plugin"
+    "tsd-jsdoc/dist/plugin",
+    "./npm/utils/jsdoc-custom-tags-plugin.js"
   ],
   "templates": {
     "cleverLinks": true,
