Refactor `pm.execution.location`

--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,6 @@
 unreleased:
     new features:
-     - GH-950 Added support for pm.execution.location
+     - GH-950 Added support for `pm.execution.location`
 
 4.3.0:
   date: 2023-11-02
