--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "terser": "^5.24.0",
     "tsd-jsdoc": "^2.5.0",
     "tv4": "1.3.0",
-    "uniscope": "2.0.1",
+    "uniscope": "github:postmanlabs/uniscope#feat/options-reset-locals",
     "watchify": "^4.0.0",
     "xml2js": "0.4.23"
   },
