Add workflow to publish beta on push to channel/beta

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postman-sandbox",
+  "name": "postman-sandbox-custom-beta",
   "version": "4.4.0",
   "description": "Sandbox for Postman Scripts to run in Node.js or browser",
   "author": "Postman Inc.",
