--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+unreleased:
+  new features:
+    - GH-976 Add `pm.require` API to use packages inside scripts
+
 4.4.0:
   date: 2023-11-18
   new features:
