--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "lodash": "4.17.21",
-    "postman-collection": "4.3.0",
+    "postman-collection": "4.4.0",
     "teleport-javascript": "1.0.0",
     "uvm": "2.1.1"
   },
@@ -92,7 +92,7 @@
     "terser": "^5.24.0",
     "tsd-jsdoc": "^2.5.0",
     "tv4": "1.3.0",
-    "uniscope": "github:postmanlabs/uniscope#feat/options-reset-locals",
+    "uniscope": "2.1.0",
     "watchify": "^4.0.0",
     "xml2js": "0.4.23"
   },
