--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,6 @@
 unreleased:
+  fixed bugs:
+    - GH-981 Dropped support for legacy sandbox APIs in packages
   new features:
     - |
       GH-984 Added `pm.execution.setNextRequest` API, similar to legacy
