--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.6.0:
+  date: 2024-03-13
   fixed bugs:
     - GH-981 Dropped support for legacy sandbox APIs in packages
     - GH-985 Fixed the error message shown when there is an error in packages
