--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.6.1:
+  date: 2024-04-01
   fixed bugs:
     - GH-986 Fixed the types for `pm.execution.setNextRequest`
     - GH-990 Sanitized the global scope by deleting the timers properties
