--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,8 @@
+unreleased:
+  new features:
+    - GH-987 Deprecated legacy sandbox APIs
+    - GH-991 Added warnings in console when legacy sandbox APIs are used
+
 4.6.1:
   date: 2024-04-01
   fixed bugs:
