--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.7.0:
+  date: 2024-04-01
   new features:
     - GH-987 Deprecated legacy sandbox APIs
     - GH-991 Added warnings in console when legacy sandbox APIs are used
