--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+unreleased:
+  chores:
+    - GH-993 Moved deprecation warnings to be on the first usage of API
+
 4.7.0:
   date: 2024-04-01
   new features:
