--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -2,6 +2,7 @@ unreleased:
   chores:
     - GH-994 Modified process.mainModule to prevent access to the Module object
     - GH-990 Sanitized the global scope by deleting the timers properties
+    - GH-872 Added support for Promise execution
 
 4.1.4:
   date: 2023-10-20
