--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,4 +1,5 @@
-unreleased:
+4.1.5:
+  date: 2024-04-05
   chores:
     - GH-994 Modified process.mainModule to prevent access to the Module object
     - GH-990 Sanitized the global scope by deleting the timers properties
