--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@postman/shipit": "^0.4.0",
     "@postman/tough-cookie": "4.1.3-postman.1",
+    "@stylistic/eslint-plugin-js": "^1.8.0",
     "ajv": "6.12.5",
     "assert": "2.0.0",
     "async": "^3.2.5",
@@ -69,6 +70,7 @@
     "eslint-plugin-jsdoc": "^47.0.2",
     "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-mocha": "^10.4.3",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-security": "^2.1.1",
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
