--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,7 +1,10 @@
 unreleased:
+  new features:
+    - GH-999 Improved isolation for executing scripts
   breaking changes:
     - GH-1004 Dropped support for Node < v16
   chores:
+    - GH-999 Bumped `uvm` dependency
     - GH-1004 Updated ESLint rules
 
 4.7.1:
