--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,8 +1,9 @@
 unreleased:
-  new features:
-    - GH-999 Improved isolation for executing scripts
   breaking changes:
     - GH-1004 Dropped support for Node < v16
+  new features:
+    - GH-999 Improved isolation for executing scripts
+    - GH-1000 Added support for top-level await in scripts
   chores:
     - GH-999 Bumped `uvm` dependency
     - GH-1004 Updated ESLint rules
