--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -7,6 +7,7 @@ unreleased:
   chores:
     - GH-999 Bumped `uvm` dependency
     - GH-1004 Updated ESLint rules
+    - Bumped `xml2js` to `v0.6.2`
 
 4.7.1:
   date: 2024-04-03
