--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
 
       - if: ${{ matrix.coverage }}
         name: Upload coverage
-        run: npm run codecov -- -c -Z -f .coverage/coverage-final.json -F unit
+        run: npm run codecov -- -c -Z -f .coverage/coverage-final.json -F unit -t ${{ secrets.CODECOV_TOKEN }}
 
       - name: Run vm tests
         run: npm run test-vm
