--- a/codecov.yml
+++ b/codecov.yml
@@ -16,8 +16,9 @@ coverage:
 
       # coverage status for unit tests
       unit:
-        flags: unit
         target: 50
+        flags:
+            - unit
 
 parsers:
   javascript:
