--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,9 @@
 unreleased:
   fixed bugs:
-    - GH-1023 Prevented invalid events from being executed
+    - GH-1023 Prevented invalid Events from being executed
+  chores:
+    - Updated dependencies
+
 5.0.0:
   date: 2024-06-19
   breaking changes:
