Prevent invalid events from being executed (#1023)

--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,9 @@
 unreleased:
+  fixed bugs:
+    - GH-1023 Prevented invalid Events from being executed
   chores:
     - Allowed access to `pm.vault` only when `vaultSecrets` is set
+    - Updated dependencies
 
 5.1.0:
   date: 2024-07-29
