Limit access to vault interface

--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,3 +1,7 @@
+unreleased:
+  fixed bugs:
+    - GH-1040 Only allow `set`, `get` and `unset` operations on `pm.vault`
+
 5.1.1:
   date: 2024-08-01
   fixed bugs:
