--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,6 +1,6 @@
 unreleased:
   fixed bugs:
-    - Fixed `uncaughtException` event listener not being removed
+    - GH-1036 Fixed `uncaughtException` event listener not being removed
 
 5.1.1:
   date: 2024-08-01
