--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -6,8 +6,11 @@ unreleased:
     - GH-1035 Added missing buffer APIs to expose a uniform interface across environments
     - GH-1052 Added support URL, Encoding, File, Cryptography, and Stream globals
     - GH-1049 Replaced shims for atob and btoa with native implementations
-    - GH-1051 Added support for File global
     - GH-1050 Deprecated `atob`, `btoa`, `backbone`, 'crypto-js' and `tv4` libraries
+    - |
+      GH-1066 Added support for AbortController, AbortSignal, AggregateError,
+      DOMException, Event, EventTarget, Intl, structuredClone and queueMicrotask globals
+    - GH-1051 Added support for File global
   fixed bugs:
     - GH-1036 Fixed `uncaughtException` event listener not being removed
     - GH-1034 Fixed an issue where sandbox crashes for large response body
@@ -15,6 +18,7 @@ unreleased:
   chores:
     - GH-1033 Update ci.yml to run coverage on latest node version
     - GH-1032 Add support for configuring module resolver based on environment
+    - GH-1066 Update dependencies
 
 5.1.2:
   date: 2024-09-04
